bug in str(event_id) fixed
